--- a/graph-viz/src/css/grid.css
+++ b/graph-viz/src/css/grid.css
@@ -1,22 +1,22 @@
  .box {
   display: inline-block;       
   border: 1px solid black;
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   margin-left: -1px;
   margin-bottom: -1px;
   }
 
 .off {
-  background-color: lightgray;
+  background-color: #ffffff;
 }
 
 .on {
-  background-color: green;
+  background-color:#000000;
 }
   
 .box:hover { 
-  background: #00CCFF;
+  background: #000000;
 }
 
 .center {
@@ -29,8 +29,11 @@
   width: 150px;
   line-height: 0;
   margin: auto;
-  box-shadow: 0px 0px 20px purple;
+  /* box-shadow: 0px 0px 20px purple; */
   margin-top: 20px;
+  border-width: 2px;
+  border-color: #000000;
+  border-style: solid; 
 }
   
 h1, h2, h3, h4 {
