--- a/graph-viz/src/css/grid.css
+++ b/graph-viz/src/css/grid.css
@@ -23,6 +23,14 @@
   background-color: green;
 }
 
+ .queue {
+  background-color: #0077ff;
+} 
+
+.visited {
+  background-color: #ffA500;
+}
+
 .center {
   margin: auto;
   display: table;
@@ -33,7 +41,6 @@
   width: 150px;
   line-height: 0;
   margin: auto;
-  /* box-shadow: 0px 0px 20px purple; */
   margin-top: 20px;
   border-width: 2px;
   border-color: #000000;
